Sculpt Mask not visible (Show mask enabled) #70564

Closed
opened 2019-10-05 18:24:06 +02:00 by Henrik Abreu · 13 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 388.13

Blender Version
Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: f6cb5f5449
Worked: (optional)

Short description of error
I can't see the mask when sculpting my mesh, even if Mask is checked in Viewport Overlays and Show Mask is checked in Options. The mask is working but i can't see it.

Exact steps for others to reproduce the error
Just try to mask the CC_Base_Body mesh.

**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 388.13 **Blender Version** Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: `f6cb5f5449` Worked: (optional) **Short description of error** I can't see the mask when sculpting my mesh, even if Mask is checked in Viewport Overlays and Show Mask is checked in Options. The mask is working but i can't see it. **Exact steps for others to reproduce the error** Just try to mask the CC_Base_Body mesh.
Author

Added subscriber: @kafonah

Added subscriber: @kafonah
Henrik Abreu changed title from **Mask not visible** (Show mask enabled) to Mask not visible (Show mask enabled) 2019-10-05 18:24:32 +02:00
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Hm, I can confirm there is something wrong here, I can only get it to work if I delete all shapekeys and disable all modifiers in the viewport...
Needs more investigation...

Hm, I can confirm there is something wrong here, I can only get it to work if I delete all shapekeys and disable all modifiers in the viewport... Needs more investigation...
Member

Added subscribers: @Sergey, @JulienKaspar

Added subscribers: @Sergey, @JulienKaspar
Member

@lichtwerk Just for clarification, Blender does tell the user that "Hide, Mask and optimised display is disabled" when modifiers are being used.
But at some point last year, @Sergey at least implemented that masks are visible when using shapekeys, as far as I remember. This feature seems to be gone now.

@lichtwerk Just for clarification, Blender does tell the user that "Hide, Mask and optimised display is disabled" when modifiers are being used. But at some point last year, @Sergey at least implemented that masks are visible when using shapekeys, as far as I remember. This feature seems to be gone now.
Member

Will confirm for now, I am bisecting atm... [to at least know when this changed...]

Will confirm for now, I am bisecting atm... [to at least know when this changed...]
Member

@lichtwerk I talked with sergey and apparently it only got implemented in 2.79 and didn't transition over to 2.8.

Edit: I tried out 2.79 and apparently it was never implemented. Masks are invisible with shapekeys unless they are pinned.

@lichtwerk I talked with sergey and apparently it only got implemented in 2.79 and didn't transition over to 2.8. Edit: I tried out 2.79 and apparently it was never implemented. Masks are invisible with shapekeys unless they are pinned.
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Member

This started getting weird with d0fb602e2c (here sculpt mask strokes would still be visible while doing the stroke, but chances are high these get invisible when stroke ends, then on a new stroke everything gets visible again, ...)

Still need to check/bisect when this broke "completely"...

CC @Jeroen-Bakker

(not completely sure how severe this is, but since it seems a regression, will put on High prio for now...)

This started getting weird with d0fb602e2c (here sculpt mask strokes would still be visible while doing the stroke, but chances are high these get invisible when stroke ends, then on a new stroke everything gets visible again, ...) Still need to check/bisect when this broke "completely"... CC @Jeroen-Bakker (not completely sure how severe this is, but since it seems a regression, will put on High prio for now...)
Philipp Oeser changed title from Mask not visible (Show mask enabled) to Sculpt Mask not visible (Show mask enabled) 2019-10-07 14:09:05 +02:00
Member

Added subscriber: @brecht

Added subscriber: @brecht
Member

Looks like this was the nail in the coffin 692891f69e
CC @brecht

@JulienKaspar : not sure about the "sculpt-on-shapekey" thingie, in this file there are shapekeys but non is actually active (they are all zero or you can disable them all)

At least sculpt mask was visible before d0fb602e2c, 692891f69e in this setup, so maybe others can comment...

Looks like this was the nail in the coffin 692891f69e CC @brecht @JulienKaspar : not sure about the "sculpt-on-shapekey" thingie, in this file there are shapekeys but non is actually active (they are all zero or you can disable them all) At least sculpt mask was visible before d0fb602e2c, 692891f69e in this setup, so maybe others can comment...

This issue was referenced by d7465c23c7

This issue was referenced by d7465c23c74931ae6c3fef9ba4f1687c66498c36

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Brecht Van Lommel self-assigned this 2019-10-07 17:39:47 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70564
No description provided.