Fix T70564: sculpt mask display missing with shape keys or deforming modifiers